<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mpoo.bsi.ufrpe.helpvegapp.event.gui.EventActivity">

    <TextView
        android:id="@+id/eventPageName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventName"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/eventPageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eventDescription"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="17sp"/>

    <Button
        android:id="@+id/btnEditEvent"
        android:layout_width="150dp"
        android:background="@color/colorPrimary"
        android:text="@string/eventEdit"
        android:textColor="@color/colorTextPrimary"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"/>

    <Button
        android:id="@+id/btnDeleteEvent"
        android:layout_width="150dp"
        android:background="@color/colorPrimary"
        android:text="@string/eventDelete"
        android:textColor="@color/colorTextPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

</LinearLayout>
